# rulebasedmodels

./: CUBIST_README
C5/: DESCRIPTION  NAMESPACE
C5/R/: C5.0.R  makeDataFile.R  makeNamesFile.R  predict.C5.0.R
C5/man/: C5.0.Rd  C5.0Control.Rd  churn.Rd  predict.C5.0  predict.C5.0.Rd  summary.C5.0  summary.C5.0.Rd  varImp.C5.0  varImp.C5.0.Rd
C5/src/: Makefile  c50.c  classify.c  confmat.c  construct.c  formtree.c  global.c  hooks.c  mk  modelfiles.c  prune.c  rc50.c  redefine.c  redefine.h  rsample.c  rulebasedmodels.c  sample.c  top.c  utility.c
branch/C50tcl/: NAMESPACE
branch/C50tcl/exec/: RC50.tcl
pkg/C5/: DESCRIPTION
pkg/C5.0/: DESCRIPTION  NAMESPACE
pkg/C5.0/R/: C5.0.R
pkg/C5.0/src/: Makevars  defns.h  siftrules.c
pkg/C5/R/: C5.0.R  makeDataFile.R  makeNamesFile.R  predict.C5.0.R
pkg/Cubist/: DESCRIPTION  NAMESPACE  configure  configure.ac  configure.win
pkg/Cubist/R/: cubist.R  makeDataFile.R  predict.cubist.R
pkg/Cubist/inst/: NEWS.Rd
pkg/Cubist/inst/doc/: cubist.Rd  cubist.Rnw  cubist.tex
pkg/Cubist/man/: cubist.Rd  cubistControl.Rd  exportCubistFiles.Rd  predict.cubist.Rd  summary.cubist.Rd
pkg/Cubist/src/: Makevars  construct.c  contin.c  formrules.c  getnames.c  implicitatt.c  modelfiles.c  predict.c  prunetree.c  rcubist.c  redefine.c  rsample.c  rulebasedmodels.c  rules.c  sample.c  strbuf.c  top.c  update.c  utility.c  xval.c
pkg/RuleBasedModels/: DESCRIPTION  NAMEPSACE  NAMESPACE
www/: assets.file:--localhost-Users-kuhna03-tmp-rbm-.plist  index.html
www/Rule-Based_Models/: Rule-Based_Models.html  feed.xml  index.html
(+524 files in other folders)
